--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Mock API creation",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "lokijs": "^1.5.6"
+    "lokijs": "^1.5.6",
+    "path": "^0.12.7"
   }
 }
